Layout fixes for classifier examples Should fix bottom row of examples being cut off. Fixes layout issues for RTL languages.

--- a/css/locales.styl
+++ b/css/locales.styl
@@ -15,6 +15,13 @@ html[lang="fa"], .rtl
   #papers *,
   #team *
     direction: ltr
+  
+  .dialog
+    .help
+      text-align: right
+      
+      .label
+        text-align: right
 
 html[lang="he"], .rtl
   direction: rtl
@@ -44,6 +51,13 @@ html[lang="he"], .rtl
       width: 300px
       .description
         width: auto
+
+  .dialog
+    .help
+      text-align: right
+  
+      .label
+        text-align: right
 
 @media (max-width: 1385px)
   html[lang="he"]
